delete env file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-DB_DSN = mysql:host=localhost;port=3306;dbname=example
+DB_DSN = mysql:host=localhost;port=3306;dbname=project-uni
 DB_USERNAME = root
-DB_PASSWORD = root
+DB_PASSWORD =
+API_KEY =
+URL_SMS =
+from = 10001000300024
+SECRET_KEY =
+ADMIN=
